# BDD-CPP-PROGRAMACION

./: BDEscuela.sql  CMakeLists.txt  bdescuela.sql  main.cpp
